# solana-escrow

./: Anchor.toml  readme.md
app/: next.config.ts  package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
app/src/components/: WalletButton.tsx
app/src/context/: SolanaProvider.tsx
app/src/hooks/: useGameFiProgram.ts
app/src/idl/: gamefi_vault.json  solana_escrow.json
programs/solana-escrow/: Cargo.toml
programs/solana-escrow/src/: error.rs  lib.rs  state.rs
programs/solana-escrow/src/instructions/: stake.rs
programs/solana-escrow/tests/: test_initialize.rs
tests/: solana-escrow.ts
